--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,3 +24,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rand = "0.9.0"
 chrono = { version = "0.4", features = ["serde"] }
+tauri-plugin-notification = "2.2.2"
