--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ serde_json = "1"
 rand = "0.9.0"
 chrono = { version = "0.4", features = ["serde"] }
 tauri-plugin-notification = "2.2.2"
+uuid = { version = "1", features = ["v4", "serde"] }
