--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,3 +26,4 @@ rand = "0.9.0"
 chrono = { version = "0.4", features = ["serde"] }
 tauri-plugin-notification = "2.2.2"
 uuid = { version = "1", features = ["v4", "serde"] }
+shared = { path = "../shared" }
