--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,3 +27,4 @@ chrono = { version = "0.4", features = ["serde"] }
 tauri-plugin-notification = "2.2.2"
 uuid = { version = "1", features = ["v4", "serde"] }
 shared = { path = "../shared" }
+once_cell = "1.18.0"
